# price-monitor

./: .env.example  .gitignore  .pylintrc  Dockerfile  README.md  codigo_pagina_do_iphone.txt  docker-compose.yml  main.py  pyproject.toml  test_scraper.py  visual_scraper.py
scripts/: run_monitor.py
src/: __init__.py  containers.py  main.py
src/application/: __init__.py  database_initialization_service.py
src/application/dto/: __init__.py  product_dto.py
src/application/services/: __init__.py  notification_service.py  scraping_service.py
src/bot/: __init__.py  handlers.py  telegram_bot.py
src/bot/handlers/: __init__.py  message_handler.py  start_handler.py  unknown_handler.py
src/config/: __init__.py  logging.py  logging_config.py  settings.py
src/data/: database.py  database_interface.py  sqlite_database.py
src/data/datasources/: __init__.py  sqlite_user_datasource.py  user_datasource.py
src/domain/: __init__.py  entities.py
src/domain/entities/: price_history.py  product.py  user.py
src/domain/repositories/: __init__.py  user_repository_interface.py
src/domain/value_objects/: __init__.py  price.py
src/infrastructure/: __init__.py
src/infrastructure/database/: __init__.py  database.py  models.py
src/infrastructure/repositories/: product_repository.py
src/infrastructure/scraping/: __init__.py  olx_scraper.py  scraper_factory.py  visual_scraper.py
src/infrastructure/telegram/: application_provider.py
src/interfaces/: __init__.py  cli.py
src/interfaces/api/: routes.py
src/models/: user.py
src/repositories/: user_repository.py
src/usecases/: user_usecases.py
tests/integration/: test_olx_scraper.py
tests/unit/: application
